@@ -1,6 +1,8 @@
 Copyright (C) 2022 LANNOCC (Shawn A. Wilson [lannocc@yahoo.com])
 @%@~LICENSE:MIT~@%@
 
+saw_073022_6 - Window movement (Linux).
+
 saw_073022_5 - Version bump: tested on Linux and Win7.
 
 saw_073022_4 - Print containment on Windows.
